# agent-rs-web

./: .env.example  .gitignore  .gitmodules  Cargo.toml  build.rs  diesel.toml  docker-compose.yml  justfile
migrations/00000000000001_initial_schema/: down.sql  up.sql
migrations/00000000000001_users/: up.sql
migrations/00000000000002_conversation_pinned_docs/: down.sql  up.sql
src/: app.rs  db.rs  error.rs  grpc.rs  lib.rs  main.rs  middleware.rs  minio_client.rs  pb.rs  schema.rs
src/auth/: mod.rs  schema.rs
src/conversations/: mod.rs
src/routes/: chat.rs  library.rs  login.rs  mod.rs  signup.rs
style/: main.scss
