[package]
name = "agent-rs-web"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Leptos SSR + axum — scaffolded from leptos-rs/start-axum.
leptos = { version = "0.8.0" }
leptos_router = { version = "0.8.0" }
axum = { version = "0.8.0", optional = true, features = ["multipart"] }
console_error_panic_hook = { version = "0.1", optional = true }
leptos_axum = { version = "0.8.0", optional = true }
leptos_meta = { version = "0.8.0" }
tokio = { version = "1", features = ["rt-multi-thread", "sync"], optional = true }
# `ReceiverStream` adapter for the chat SSE handler — bridges tokio
# mpsc receivers into the `Stream` trait that axum's `Sse` body
# consumes. Pinned to the same generation as our tokio dep.
tokio-stream = { version = "0.1", optional = true }
wasm-bindgen = { version = "0.2.106", optional = true }

# gRPC client against github.com/cosming20/agent-rs-proto (compiled at
# build time by build.rs via tonic-build). SSR-only — the generated
# types don't cross the wasm boundary.
tonic   = { version = "0.12", optional = true }
prost   = { version = "0.13", optional = true }
tonic-types = { version = "0.12", optional = true }

# Auth plumbing. Signup/login against a local Postgres users table
# with bcrypt-hashed passwords + axum session cookies. SSR-only.
bcrypt          = { version = "0.15", optional = true }
serde           = { version = "1",    features = ["derive"] }
# Used by both SSR (DB jsonb columns, gRPC payload re-encoding) and
# hydrate (parsing the SSE `data:` payloads emitted by
# `routes::chat::ask_stream_handler`), so it stays non-optional.
serde_json      = { version = "1" }
uuid            = { version = "1",    features = ["v4", "serde", "js"] }
tower-sessions              = { version = "0.14", optional = true }
# Redis-backed session store — sessions survive a server restart
# and scale horizontally across multiple SSR workers.
# tower-sessions-redis-store 0.16 pins tower-sessions-core 0.14, so
# we stay on tower-sessions 0.14 to avoid a second-copy mismatch
# where RedisStore implements SessionStore from a different version
# than SessionManagerLayer expects.
tower-sessions-redis-store  = { version = "0.16", optional = true }
fred                        = { version = "10",   optional = true }
diesel          = { version = "2.2", features = ["postgres", "chrono", "uuid", "serde_json"], optional = true }
diesel-async    = { version = "0.5", features = ["postgres", "bb8"], optional = true }
chrono          = { version = "0.4", features = ["serde"] }

# S3-compatible object storage client for direct-to-MinIO uploads from
# the web handler. Defaults pull the hyper+rustls HTTP stack which the
# SDK requires; stripping them leaves every request with "dispatch
# failure". SSR-only.
aws-sdk-s3      = { version = "1.60", optional = true }
sha2            = { version = "0.10", optional = true }

# Streaming / byte utilities.
futures = { version = "0.3", optional = true }
bytes   = { version = "1",   optional = true }

# Time — required by tower-sessions session expiry.
time    = { version = "0.3", optional = true }

# .env loader (dev convenience; optional so the binary still starts without a .env)
dotenvy = { version = "0.15", optional = true }

# Browser file-reading utilities (hydrate only — compiled to wasm).
# Leptos re-exports web-sys but does not enable every DOM type by
# default; the upload form in routes/library.rs needs File + FileList
# + the HtmlInputElement.files() method, all gated behind per-type
# features on web-sys. The Ask streaming hook in routes/chat.rs needs
# Request / Response / fetch / ReadableStream + TextDecoder so it can
# read SSE chunks off `/api/ask_stream` and surface deltas live.
js-sys              = { version = "0.3", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
web-sys             = { version = "0.3", optional = true, features = [
    "Blob",
    "Document",
    "Event",
    "EventTarget",
    "File",
    "FileList",
    "FormData",
    "Headers",
    "HtmlElement",
    "HtmlFormElement",
    "HtmlInputElement",
    "HtmlTextAreaElement",
    "ReadableStream",
    "ReadableStreamDefaultReader",
    "Request",
    "RequestInit",
    "Response",
    "SubmitEvent",
    "TextDecoder",
    "Window",
] }

# Errors + observability.
anyhow             = { version = "1", optional = true }
thiserror          = "1"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }

[build-dependencies]
tonic-build = "0.12"

[features]
hydrate = [
    "leptos/hydrate",
    "dep:console_error_panic_hook",
    "dep:wasm-bindgen",
    "dep:js-sys",
    "dep:wasm-bindgen-futures",
    "dep:web-sys",
]
ssr = [
    "dep:axum",
    "dep:tokio",
    "dep:tokio-stream",
    "dep:leptos_axum",
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
    # SSR-only deps (network, DB, crypto — never shipped to the browser):
    "dep:tonic",
    "dep:prost",
    "dep:tonic-types",
    "dep:bcrypt",
    "dep:tower-sessions",
    "dep:tower-sessions-redis-store",
    "dep:fred",
    "dep:diesel",
    "dep:diesel-async",
    "dep:anyhow",
    "dep:tracing-subscriber",
    "dep:futures",
    "dep:bytes",
    "dep:time",
    "dep:dotenvy",
    "dep:aws-sdk-s3",
    "dep:sha2",
]

# Defines a size-optimized profile for the WASM bundle in release mode
[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"

[package.metadata.leptos]
# The name used by wasm-bindgen/cargo-leptos for the JS/WASM bundle. Defaults to the crate name
output-name = "agent-rs-web"

# The site root folder is where cargo-leptos generate all output. WARNING: all content of this folder will be erased on a rebuild. Use it in your server setup.
site-root = "target/site"

# The site-root relative folder where all compiled output (JS, WASM and CSS) is written
# Defaults to pkg
site-pkg-dir = "pkg"

# [Optional] The source CSS file. If it ends with .sass or .scss then it will be compiled by dart-sass into CSS. The CSS is optimized by Lightning CSS before being written to <site-root>/<site-pkg>/agent-rs-web.css
style-file = "style/main.scss"
# Assets source dir. All files found here will be copied and synchronized to site-root.
# The assets-dir cannot have a sub directory with the same name/path as site-pkg-dir.
#
# Optional. Env: LEPTOS_ASSETS_DIR.
assets-dir = "public"

# The IP and port (ex: 127.0.0.1:3000) where the server serves the content. Use it in your server setup.
site-addr = "127.0.0.1:3000"

# The port to use for automatic reload monitoring
reload-port = 3001

# [Optional] Command to use when running end2end tests. It will run in the end2end dir.
#   [Windows] for non-WSL use "npx.cmd playwright test"
#   This binary name can be checked in Powershell with Get-Command npx
end2end-cmd = "npx playwright test"
end2end-dir = "end2end"

#  The browserlist query used for optimizing the CSS.
browserquery = "defaults"

# The environment Leptos will run in, usually either "DEV" or "PROD"
env = "DEV"

# The features to use when compiling the bin target
#
# Optional. Can be over-ridden with the command line parameter --bin-features
bin-features = ["ssr"]

# If the --no-default-features flag should be used when compiling the bin target
#
# Optional. Defaults to false.
bin-default-features = false

# The features to use when compiling the lib target
#
# Optional. Can be over-ridden with the command line parameter --lib-features
lib-features = ["hydrate"]

# If the --no-default-features flag should be used when compiling the lib target
#
# Optional. Defaults to false.
lib-default-features = false

# The profile to use for the lib target when compiling for release
#
# Optional. Defaults to "release".
lib-profile-release = "wasm-release"
